// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parseMarkdown > full-example.md 1`] = `
{
  "show-footer": {
    "conditions": {},
    "enabled": true,
    "environments": {},
    "name": "Show footer",
  },
  "show-install-script": {
    "conditions": {
      "condition-5": {
        "enabled": false,
        "name": "Condition 5",
      },
      "condition-6": {
        "enabled": true,
        "name": "Condition 6",
      },
    },
    "enabled": true,
    "environments": {
      "production": {
        "enabled": true,
        "name": "Production",
      },
    },
    "name": "Show install script",
  },
  "show-logo": {
    "conditions": {
      "condition-1": {
        "enabled": false,
        "name": "Condition 1",
      },
      "condition-2": {
        "enabled": true,
        "name": "Condition 2",
      },
    },
    "enabled": true,
    "environments": {
      "development": {
        "enabled": false,
        "name": "Development",
      },
      "preview": {
        "enabled": true,
        "name": "Preview",
      },
      "production": {
        "enabled": false,
        "name": "Production",
      },
    },
    "name": "Show logo",
  },
}
`;

exports[`parseMarkdown > no-features-enabled.md 1`] = `
{
  "show-footer": {
    "conditions": {},
    "enabled": false,
    "environments": {},
    "name": "Show footer",
  },
  "show-install-script": {
    "conditions": {},
    "enabled": false,
    "environments": {},
    "name": "Show install script",
  },
  "show-logo": {
    "conditions": {},
    "enabled": false,
    "environments": {},
    "name": "Show logo",
  },
}
`;

exports[`parseMarkdown > only-features.md 1`] = `
{
  "show-footer": {
    "conditions": {},
    "enabled": true,
    "environments": {},
    "name": "Show footer",
  },
  "show-install-script": {
    "conditions": {},
    "enabled": false,
    "environments": {},
    "name": "Show install script",
  },
  "show-logo": {
    "conditions": {},
    "enabled": true,
    "environments": {},
    "name": "Show logo",
  },
}
`;

exports[`parseMarkdown > several-features-multi-env.md 1`] = `
{
  "show-footer": {
    "conditions": {},
    "enabled": true,
    "environments": {
      "production": {
        "enabled": true,
        "name": "Production",
      },
    },
    "name": "Show footer",
  },
  "show-install-script": {
    "conditions": {},
    "enabled": false,
    "environments": {
      "development": {
        "enabled": true,
        "name": "Development",
      },
      "preview": {
        "enabled": false,
        "name": "Preview",
      },
    },
    "name": "Show install script",
  },
  "show-logo": {
    "conditions": {},
    "enabled": true,
    "environments": {},
    "name": "Show logo",
  },
}
`;
